Added /api/cron endpoint with logic to scrape tomorrow's matches

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ NEXT_PUBLIC_DEFAULT_PLAYER_IMAGE=
 
 NEXT_PUBLIC_SCRAPING_STATS_URL=
 NEXT_PUBLIC_SCRAPING_STATS_SITE_NAME=
+
+# Cron
+CRON_SECRET=
