--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/test",
-      "schedule": "* * * * *"
+      "path": "/api/cron",
+      "schedule": "* 1 * * *"
     }
   ]
 }
