--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "mongoose": "^6.2.9",
     "next": "12.1.0",
     "next-auth": "^4.23.1",
-    "puppeteer": "^13.5.2",
+    "puppeteer": "10.1.0",
     "puppeteer-cluster": "^0.23.0",
+    "puppeteer-core": "^21.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -31,7 +32,9 @@
     "react-window": "^1.8.10",
     "recharts": "^2.1.9",
     "swr": "^1.2.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@sparticuz/chromium-min": "^119.0.0",
+    "chrome-aws-lambda": "10.1.0"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
